--- a/index.css
+++ b/index.css
@@ -96,4 +96,29 @@
     overflow: hidden;
 }
 
+.cb-slideshow,
+.cb-slideshow:after {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    z-index: 0;
+}
+.cb-slideshow:after {
+    content: '';
+    background: transparent url(../images/pattern.png) repeat top left;
+}
+
+gallery {
+    display:flex;
+    flex-wrap: wrap-reverse;
+}
+
+allbuttons {
+
+    position: fixed;
+}
+
+
 </style>
